--- a/src/styles/EmployeeGrid.css
+++ b/src/styles/EmployeeGrid.css
@@ -13,8 +13,22 @@
   height: 83vh;
 }
 
-.chip-rounded {
-  border-radius: 50px !important;
+.grid-header-template {
+  display: inline-flex;
+  align-items: center;
+  gap: 0.35rem;
+  font-weight: 600;
+  color: #0f172a;
+}
+
+.grid-header-template.e-icons, .grid-header-template .e-icons {
+  position: relative;
+  bottom: -.5px;
+}
+
+.e-chip-list.chip-rounded, 
+.e-chip-list .chip-rounded {
+  border-radius: 50px;
 }
 
 .grid-chip-center {
